# Lesson_22

./: .env.sample  .gitignore  README.md  groups_fixtures.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_note_description.py  0003_alter_note_options.py
blog/templates/: blog_main.html  create_note.html  delete_note.html  detail_note.html  update_note.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: catalog_fixture.json
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contactinfo_alter_product_category.py  0003_product_is_active.py  0004_alter_product_is_active.py
catalog/templates/: add_product.html  base.html  contacts.html  home.html  product_delete.html  product_detail.html  product_info.html  product_update.html
catalog/templates/includes/: footer.html  header.html  paginator.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html  user_update.html
