[project]
name = "lesson-22"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrievskis",email = "nnefedova1@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.18.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ipython (>=9.5.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"